--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -1,5 +1,4 @@
 @PACKAGE_INIT@
 
-if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/NanoSVGTargets.cmake)
-    include("${CMAKE_CURRENT_LIST_DIR}/NanoSVGTargets.cmake")
-endif ()
+include("${CMAKE_CURRENT_LIST_DIR}/@TARGETS_EXPORT_NAME@.cmake")
+check_required_components("@PROJECT_NAME@")
